# pyworkflow

./: .coverage  .flake8  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  conftest.py  docker-compose.yml  mywf.py  pyproject.toml  pytest.ini  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish-npm.yml  publish.yml  tests.yml
docs/: publishing.md
docs/examples/: full_example.py
examples/: api_automation.py  data_pipeline.py  file_processing.py  scheduled_report.py  web_scraping.py
pyworkflow/: __init__.py
pyworkflow/cli/: __init__.py  main.py
pyworkflow/contracts/: __init__.py  validation.py
pyworkflow/core/: __init__.py  engine.py  execution.py  state.py  task.py  workflow.py
pyworkflow/decorators/: __init__.py  task.py
pyworkflow/exceptions/: __init__.py
pyworkflow/logging/: __init__.py  logger.py
pyworkflow/plugins/: __init__.py  ai.py  api.py  base.py  database.py  email.py
pyworkflow/scheduler/: __init__.py  cron.py  scheduler.py
pyworkflow/storage/: __init__.py  base.py  checkpoints.py  database.py  json_storage.py  sqlite.py  sqlite_storage.py
pyworkflow/visualization/: __init__.py  graph.py
pyworkflow/workers/: __init__.py  executor.py  process_worker.py  worker.py
pyworkflow_framework.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
react-pyworkflow/: .gitignore  README.md  example.js  package-lock.json  package.json  tsconfig.json  tsup.config.ts
react-pyworkflow/src/: Task.ts  Workflow.ts  index.ts  types.ts  (+1 more)
(+12 files in other folders)
