[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyworkflow-framework"
version = "0.1.1"
description = "A lightweight, developer-friendly Python workflow automation framework."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "PyWorkflow Contributors" }]
keywords = ["workflow", "automation", "orchestration", "pipeline", "scheduler", "tasks"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
]


[project.optional-dependencies]
viz = ["graphviz>=0.20", "networkx>=3.0"]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "pytest-benchmark>=4.0"]
all = ["pyworkflow-framework[viz,dev]"]

[project.urls]
Homepage = "https://github.com/pyworkflow/pyworkflow"
Documentation = "https://github.com/pyworkflow/pyworkflow#readme"
Issues = "https://github.com/pyworkflow/pyworkflow/issues"

[project.scripts]
pyworkflow = "pyworkflow.cli.main:main"

[tool.setuptools.packages.find]
include = ["pyworkflow*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
